Implement review remarks